; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu7_clockpowergating.c_smu7_powergate_uvd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu7_clockpowergating.c_smu7_powergate_uvd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pp_hwmgr = type { i32, i64 }
%struct.smu7_hwmgr = type { i32 }

@AMD_IP_BLOCK_TYPE_UVD = common dso_local global i32 0, align 4
@AMD_PG_STATE_GATE = common dso_local global i32 0, align 4
@AMD_CG_STATE_GATE = common dso_local global i32 0, align 4
@AMD_CG_STATE_UNGATE = common dso_local global i32 0, align 4
@AMD_PG_STATE_UNGATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @smu7_powergate_uvd(%struct.pp_hwmgr* %0, i32 %1) #0 {
  %3 = alloca %struct.pp_hwmgr*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.smu7_hwmgr*, align 8
  store %struct.pp_hwmgr* %0, %struct.pp_hwmgr** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %7 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.smu7_hwmgr*
  store %struct.smu7_hwmgr* %9, %struct.smu7_hwmgr** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.smu7_hwmgr*, %struct.smu7_hwmgr** %5, align 8
  %12 = getelementptr inbounds %struct.smu7_hwmgr, %struct.smu7_hwmgr* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %32

15:                                               ; preds = %2
  %16 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %17 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load i32, i32* @AMD_IP_BLOCK_TYPE_UVD, align 4
  %20 = load i32, i32* @AMD_PG_STATE_GATE, align 4
  %21 = call i32 @amdgpu_device_ip_set_powergating_state(i32 %18, i32 %19, i32 %20)
  %22 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %23 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* @AMD_IP_BLOCK_TYPE_UVD, align 4
  %26 = load i32, i32* @AMD_CG_STATE_GATE, align 4
  %27 = call i32 @amdgpu_device_ip_set_clockgating_state(i32 %24, i32 %25, i32 %26)
  %28 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %29 = call i32 @smu7_update_uvd_dpm(%struct.pp_hwmgr* %28, i32 1)
  %30 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %31 = call i32 @smu7_powerdown_uvd(%struct.pp_hwmgr* %30)
  br label %49

32:                                               ; preds = %2
  %33 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %34 = call i32 @smu7_powerup_uvd(%struct.pp_hwmgr* %33)
  %35 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %36 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = load i32, i32* @AMD_IP_BLOCK_TYPE_UVD, align 4
  %39 = load i32, i32* @AMD_CG_STATE_UNGATE, align 4
  %40 = call i32 @amdgpu_device_ip_set_clockgating_state(i32 %37, i32 %38, i32 %39)
  %41 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %42 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = load i32, i32* @AMD_IP_BLOCK_TYPE_UVD, align 4
  %45 = load i32, i32* @AMD_PG_STATE_UNGATE, align 4
  %46 = call i32 @amdgpu_device_ip_set_powergating_state(i32 %43, i32 %44, i32 %45)
  %47 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %48 = call i32 @smu7_update_uvd_dpm(%struct.pp_hwmgr* %47, i32 0)
  br label %49

49:                                               ; preds = %32, %15
  ret void
}

declare dso_local i32 @amdgpu_device_ip_set_powergating_state(i32, i32, i32) #1

declare dso_local i32 @amdgpu_device_ip_set_clockgating_state(i32, i32, i32) #1

declare dso_local i32 @smu7_update_uvd_dpm(%struct.pp_hwmgr*, i32) #1

declare dso_local i32 @smu7_powerdown_uvd(%struct.pp_hwmgr*) #1

declare dso_local i32 @smu7_powerup_uvd(%struct.pp_hwmgr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
